styles/music.css
*,
*::before,
*::after {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    background-color: white;
    font-family: 'DM Sans', sans-serif;
    color: white;
}

#logo {
    color: #1976D2;
    margin-left: 2rem;
    font-size: 1.5rem;
    font-weight: bold;
    background-image: url(../images/therapy.svg);
    background-repeat: no-repeat;
    background-size: contain;
    padding-left: 3rem;
}

#music {
    text-align: center;
    color: rgba(0, 0, 0, 0.7);
}


#header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 15vh;
}

#buttons {
    height: inherit;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-right: 4rem;
}


#buttons button {
    width: 150px;
    height: 35px;
    border-radius: 50px;
    outline: none;
    color: white;
    background-image: linear-gradient(to right, #0089ff, #0b8dc9);
    border: 0;
    font-size: 1rem;
    font-weight: bold;
}

#buttons button:first-child {
    margin-bottom: 1rem;
}

#player {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#cd {
    margin-top: 2rem;
    height: 250px;
    width: 250px;
    background-image: url(../images/cd.svg);
    background-size: contain;
    animation: rotation 5s infinite linear forwards;
    -moz-animation: rotation 5s infinite linear forwards;
    -webkit-animation: rotation 5s infinite linear forwards;
    -ms-animation: rotation 5s infinite linear forwards;
    animation-play-state: paused;
}


p {
    color: black;
    font-weight: bold;
}

#song-name {
    width: 70%;
    margin-top: 3rem;

}

#song-name p {
    margin-left: 20%;
    font-size: 1.2rem;
}

#songtime {
    display: flex;
    width: 60%;
    justify-content: space-evenly;
    align-items: center;
    margin-top: 1rem;

}

#streamline {
    width: 70%;
    height: 5px;
    border-radius: 10px;
    background-color: black;
}

#render {
    width: 0px;
    height: 5px;
    background-color: red;
    border-radius: 10px;
    animation: move linear forwards;
    -ms-animation: move linear forwards;
    -moz-animation: move linear forwards;
    -webkit-animation: move linear forwards;
    animation-play-state: paused;
}

#music-control {
    width: 20%;
    height: 8vh;
    display: flex;
    justify-content: space-around;
    align-items: center;
}


#music-control div,
#other-control div {
    height: 50px;
    width: 50px;
}


#revert {
    background-image: url(../images/skip.svg);
    transform: rotateZ(180deg);
    background-size: contain;
    background-repeat: no-repeat;

}

#play {
    background-image: url(../images/play.svg);
    background-size: contain;
    background-repeat: no-repeat;

}

#skip {
    background-image: url(../images/skip.svg);
    background-size: contain;
    background-repeat: no-repeat;

}

#other-control {
    width: 10%;
    height: 8vh;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-left: auto;
    margin-right: 10rem;
    align-items: center;
}


#download {
    background-image: url(../images/download.svg);
    background-size: contain;
    background-repeat: no-repeat;
}

#favorite {
    background-image: url(../images/favorite.svg);
    background-size: contain;
    background-repeat: no-repeat;
}

@media all and (max-width: 900px),
(orientation: portrait) {

    #cd {
        height: 150px;
        width: 150px;
    }

    #buttons button {
        width: 120px;
        height: 30px;
        font-size: 0.8rem;
        font-weight: normal;
    }


    #buttons {
        margin-right: 2rem;
    }

    #songtime {
        width: 70%;
        justify-content: space-between;
    }

    #music-control div,
    #other-control div {
        height: 35px;
        width: 35px;
    }

    #music-control {
        justify-content: space-between;
        width: 30%;
    }

    #other-control {
        width: 15%;
        margin-right: 5rem;
    }

    #song-name p {
        margin-left: 15%;
    }

}


@media all and (max-width: 500px),
(orientation: portrait) {
    #cd {
        height: 120px;
        width: 120px;
    }

    #song-name p {
        margin-left: 10%;
        font-size: 1rem;
    }
}

.paused {
    animation-play-state: paused;
}

.running {
    animation-play-state: running;
}

@keyframes rotation {
    from {
        transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -webkit-transform: rotate(0deg);
        -ms-transform: rotate(0deg);

    }

    to {
        transform: rotate(359deg);
        -webkit-transform: rotate(359deg);
        -ms-transform: rotate(359deg);
        -moz-transform: rotate(359deg);
    }
}


@keyframes move {
    from {
        width: 0px;
    }

    to {
        width: 100%;
    }
}

